# delta-kernel-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: run_integration_test.yml
acceptance/: Cargo.toml
acceptance/src/: data.rs  meta.rs
acceptance/tests/: dat_reader.rs  other.rs
catalog-test/: Cargo.toml
catalog-test/tests/: uc_catalog_test.rs
delta-kernel-engine/: Cargo.toml
delta-kernel-engine-ffi/: Cargo.toml
delta-kernel-engine-ffi/src/: engine_data.rs  lib.rs
delta-kernel-engine/src/: arrow_compat.rs  arrow_conversion.rs  arrow_data.rs  arrow_get_data.rs  arrow_utils.rs  ensure_data_types.rs  error.rs  lib.rs  parquet_row_group_skipping.rs
delta-kernel-engine/src/arrow_expression/: apply_schema.rs  evaluate_expression.rs  mod.rs  tests.rs
delta-kernel-engine/src/default/: executor.rs  file_stream.rs  filesystem.rs  json.rs  mod.rs  parquet.rs  storage.rs
delta-kernel-engine/src/parquet_row_group_skipping/: tests.rs
derive-macros/src/: lib.rs
doc/: architecture.md
doc/delta-kernel-book/: README.md  book.toml
doc/delta-kernel-book/src/: SUMMARY.md  architecture.md  inspect_table.md  introduction.md  observability.md  quick_start.md  read_table_multi_threaded.md
feature-tests/: Cargo.toml
feature-tests/tests/: catalog.rs
ffi/: .gitignore  Cargo.toml
ffi/examples/read-table/: CMakeLists.txt  read_table.c  schema.h  write_table.c
ffi/src/: engine_data.rs  engine_funcs.rs  error.rs  handle.rs  lib.rs  scan.rs
ffi/src/expressions/: kernel.rs  kernel_visitor.rs
ffi/src/transaction/: mod.rs  write_context.rs
hdfs-integration-test/: Cargo.toml
hdfs-integration-test/src/: lib.rs
hdfs-integration-test/tests/: integration_test.rs
integration-tests/: Cargo.toml  test-all-arrow-versions.sh
kernel/: Cargo.toml
kernel/benches/: arrow_scan_file_visitor_bench.rs  default_snapshot_bench.rs  metadata_bench.rs  visitor_benchmark.rs
kernel/examples/inspect-table/: Cargo.toml
kernel/examples/inspect-table/src/: main.rs
kernel/examples/read-table-changes/: Cargo.toml
kernel/examples/read-table-changes/src/: main.rs
kernel/examples/read-table-multi-threaded/: Cargo.toml
kernel/examples/read-table-multi-threaded/src/: main.rs
kernel/examples/read-table-single-threaded/: Cargo.toml
kernel/examples/read-table-single-threaded/src/: main.rs
kernel/src/: arrow.rs  arrow_compat.rs  arrow_conversion.rs  create_table.rs  error.rs  last_checkpoint_hint.rs  lib.rs  listed_log_files.rs  log_segment.rs  object_store.rs  parquet.rs  path.rs  resolved_table.rs  snapshot.rs  snapshot_builder.rs  table.rs  table_configuration.rs  table_properties.rs  transaction.rs  utils.rs
kernel/src/actions/: crc.rs  domain_metadata.rs  mod.rs  schemas.rs  set_transaction.rs
kernel/src/checkpoint/: log_replay.rs  mod.rs  tests.rs
kernel/src/create_table/: tests.rs
kernel/src/engine/: arrow_compute.rs  arrow_data.rs  arrow_expression.rs  arrow_utils.rs  mod.rs
kernel/src/engine/arrow_expression/: evaluate_expression.rs  mod.rs  tests.rs
kernel/src/engine/default/: executor.rs  file_stream.rs  filesystem.rs  json.rs  mod.rs  parquet.rs  storage.rs
kernel/src/engine/sync/: json.rs
kernel/src/expressions/: literal_expression_transform.rs  mod.rs  scalars.rs
kernel/src/kernel_predicates/: mod.rs  parquet_stats_skipping.rs
kernel/src/log_segment/: crc_tests.rs  tests.rs
kernel/src/predicates/: mod.rs
kernel/src/scan/: log_replay.rs  mod.rs  state.rs
kernel/src/schema/: mod.rs  variant_utils.rs
kernel/src/snapshot/: builder.rs
kernel/src/table_changes/: log_replay.rs  mod.rs  scan.rs  scan_file.rs
kernel/src/table_changes/log_replay/: tests.rs
kernel/src/table_features/: column_mapping.rs  mod.rs
kernel/src/transaction/: mod.rs
kernel/tests/: catalog.rs  cdf.rs  checkpoint.rs  create.rs  dhat_large_table_data.rs  dhat_large_table_log.rs  dv.rs  golden_tables.rs  hdfs.rs  read.rs  v2_checkpoints.rs  write.rs
kernel/tests/common/: mod.rs
kernel/tests/data/big_checkpoint/_delta_log/: _last_checkpoint
kernel/tests/data/delta-rs-table/: part-00001-049c1acf-9240-4876-9165-2e64a80ed720-c000.snappy.parquet
test-utils/: Cargo.toml
test-utils/src/: lib.rs
uc-catalog/: Cargo.toml
uc-catalog/src/: lib.rs
uc-client/: Cargo.toml
uc-client/src/: lib.rs
