[workspace]
members = [
    "acceptance",
    "derive-macros",
    "ffi",
    "delta-kernel-engine-ffi",
    "kernel",
    "delta-kernel-engine",
    "kernel/examples/*",
    "test-utils",
]
# note that in addition to the members above, the workspace includes examples:
# - inspect-table
# - read-table-changes
# - read-table-multi-threaded
# - read-table-single-threaded
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://delta.io"
keywords = ["deltalake", "delta", "datalake"]
license = "Apache-2.0"
repository = "https://github.com/delta-io/delta-kernel-rs"
readme = "README.md"
rust-version = "1.81"
version = "0.10.0"

[workspace.dependencies]
delta_kernel = { path = "./kernel" }
delta-kernel-engine = { path = "./delta-kernel-engine" }
