[package]
name = "catalog-test"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dev-dependencies]
delta_kernel = { path = "../kernel", features = ["default-engine", "arrow"] }
uc-catalog = { path = "../uc-catalog" }
uc-client = { path = "../uc-client" }
