[package]
name = "feature_tests"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
delta_kernel = { path = "../kernel", features = ["arrow", "default-engine" ] }
url = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1.44", features = ["rt-multi-thread"] }

[features]
default-engine = [] # REVERT
default-engine-rustls = [ "delta_kernel/default-engine-rustls" ]
