[package]
name = "delta_kernel"
description = "Core crate providing a Delta/Deltalake implementation focused on interoperability with a wide range of query engines."
documentation = "https://docs.rs/delta_kernel"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
# exclude golden tests + golden test data since they push us over 10MB crate size limit
exclude = ["tests/golden_tables.rs", "tests/golden_data/"]
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-replacements = [
  { file = "../README.md", search = "delta_kernel = \"[a-z0-9\\.-]+\"", replace = "delta_kernel = \"{{version}}\"" },
  { file = "../README.md", search = "version = \"[a-z0-9\\.-]+\"", replace = "version = \"{{version}}\"" },
]
pre-release-hook = [
  "git",
  "cliff",
  "--repository",
  "../",
  "--config",
  "../cliff.toml",
  "--unreleased",
  "--prepend",
  "../CHANGELOG.md",
  "--include-path",
  "*",
  "--tag",
  "{{version}}",
]

[dependencies]
delta_kernel_derive = { path = "../derive-macros", version = "0.10.0" }
bytes = "1.10"
chrono = "0.4.40"
indexmap = "2.9.0"
itertools = "0.14"
roaring = "0.10.12"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tracing = { version = "0.1", features = ["log"] }
url = "2"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
z85 = "3.0.6"

arrow-array-55 = { package = "arrow-array", version = "55", optional = true }
arrow-schema-55 = { package = "arrow-schema", version = "55", optional = true }
arrow-array-54 = { package = "arrow-array", version = "54.3", optional = true }
arrow-schema-54 = { package = "arrow-schema", version = "54.3", optional = true }

[features]
default = [] # no default features
internal-api = [] # internal-api will make everything marked #[internal_api] public
arrow-conversion-55 = [ "arrow-array-55", "arrow-schema-55" ] # conversion to/from arrow 55 types
arrow-conversion-54 = [ "arrow-array-54", "arrow-schema-54" ] # conversion to/from arrow 54 types

[build-dependencies]
rustc_version = "0.4.1"

[dev-dependencies]
# TODO need to pull in arrow
test_utils = { path = "../test-utils" }
paste = "1.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tempfile = "3"
tar = "0.4"
zstd = "0.13"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
