[package]
name = "uc-catalog"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
delta_kernel = { path = "../kernel" }
uc-client = { path = "../uc-client" }
url = "2"
