[package]
name = "uc-client"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
url = "2"
delta_kernel = { path = "../kernel" } # just needs types like Protocol, Metadata, Version, LogFile
