[package]
name = "read-table-single-threaded"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow = { version = "55", features = ["prettyprint", "chrono-tz"] }
clap = { version = "4.5", features = ["derive"] }
delta_kernel = { path = "../../../kernel", features = [ "internal-api" ] }
delta-kernel-engine = { path = "../../../delta-kernel-engine", features = [ "arrow-55" ] }
env_logger = "0.11.8"
itertools = "0.14"
url = "2"

[package.metadata.release]
release = false
